--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
   text-align: left;
   padding: 20px;
   background-color: white;
-  background-image: url(/images/mailbackground.jpg);
+  background-image: url(./images/mailbackground.jpg);
   margin-top: 0%;
   margin-left: 0%;
   margin-right: 0%;
@@ -37,7 +37,7 @@ h2{
 /* menu (left) */
 .cardleft {
   color: black;
-  background-image: url(/images/mailbackground.jpg);
+  background-image: url(./images/mailbackground.jpg);
   background-size:cover;
   text-align: center;
   background: rgba(244, 243, 241, 0.8);
