--- a/themiffedriffs.css
+++ b/themiffedriffs.css
@@ -4,7 +4,7 @@
 
 @font-face {
   font-family: Arial;
-  src: url(/fonts/QuirkyShading.ttf);
+  src: url(./fonts/QuirkyShading.ttf);
 }
 
 body {
@@ -13,7 +13,7 @@ body {
   text-align: justify;
   color:rgba(240, 240, 240, 0.8);
   padding: 20px;
-  background-image: url(/images/miffedriffsbackground.jpg);
+  background-image: url(./images/miffedriffsbackground.jpg);
   margin-left: 15%;
   margin-right: 15%;
 } 
